# Project-ANT

./: CMakeLists.txt  CameraController  CameraController.cpp  CameraController.h  Main  Main.cpp  PjtANT.cpp  ProjectANT  ProjectANT.pro  README.md  TODO.txt  build.sh  capture_image.sh  compile.sh  dht.c  dht.h  main.cpp  process_image  process_image.cpp  test_capture  test_capture.cpp  tmo
anz/: Makefile  ProjectANT.pro  ProjectAnt  main.cpp  mainwindow.h  moc_mainwindow.cpp
src/: main.cpp
src/script/: capture_image.sh
src/source/: DHT22.cpp  DHT22.h  ImageProcessing.cpp  ImageProcessing.h  Window.cpp  Window.h  mainwindow.cpp  process_image.cpp  process_image.h
test/: RaspiCam  simpletest_raspicam.cpp  simpletest_raspicam_cv  simpletest_raspicam_cv.cpp  test.cpp
tmp/: qt_test.cpp
warum/: test.cpp
